<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="media">Media</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="surface">Surface</string>
    <string name="sqm">sqm</string>
    <string name="map_view">MAP VIEW</string>
    <string name="data_synchronization">DATA SYNCHRONIZATION</string>
    <string name="modify">modify</string>
    <string name="search">search</string>
    <string name="create">create</string>
    <string name="navigation_drawer_open">navigation drawer is open</string>
    <string name="navigation_drawer_close">navigation drawer is closed</string>
    <string name="euro_symbol_as_string">\u20ac</string>
    <string name="dollar_symbol_as_string">$</string>
    <string name="none">None</string>
    <string name="please_fill_out_all_the_forms">Please fill out all the forms</string>
    <string name="house">House</string>
    <string name="apartment">Apartment</string>
    <string name="studio">Studio</string>
    <string name="paris">Paris</string>
    <string name="please_describe_your_photo">Please describe your photo :)</string>
    <string name="agent">Agent</string>
    <string name="type">Type</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="city">City</string>
    <string name="room">Room</string>
    <string name="bedroom">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="square_meter">Square meter</string>
    <string name="market_since">Market since</string>
    <string name="guard">Guard</string>
    <string name="garage">Garage</string>
    <string name="garden">Garden</string>
    <string name="elevator">Elevator</string>
    <string name="photos_available">Photos available</string>
    <string name="sold_out_recently">Sold out recently</string>
    <string name="registered_recently">Registered recently</string>
    <string name="grocery_store_next_by">Grocery store next by</string>

    <string name="failed_to_save_real_estate">failed to save real estate</string>
    <string name="succeed_to_save_real_estate">succeed to save real estate</string>
    <string name="settings">settings</string>

</resources>
