<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_textInputLayout_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/type"
        android:minHeight="50dp"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="Select the type">

        <AutoCompleteTextView
            android:id="@+id/search_AutoCompleteTextView_asTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_TextInputLayout_minSurface"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="Minimum Surface"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/search_TextInputLayout_maxSurface"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_textInputLayout_type"
        app:suffixText="m2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_TextInputLayout_maxSurface"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Maximum Surface"
        app:expandedHintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/search_TextInputLayout_minSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/search_TextInputLayout_minSurface"
        app:layout_constraintTop_toTopOf="@+id/search_TextInputLayout_minSurface"
        app:suffixText="m2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_textInputLayout_minPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Minimum Price"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/search_TextInputLayout_minSurface"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/search_TextInputLayout_minSurface"
        app:layout_constraintTop_toBottomOf="@+id/search_TextInputLayout_minSurface"
        app:suffixText="@string/euro_symbol_as_string">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_textInputLayout_maxPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Maximum Price"
        app:expandedHintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/search_textInputLayout_minPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/search_textInputLayout_minPrice"
        app:layout_constraintTop_toTopOf="@+id/search_textInputLayout_minPrice"
        app:suffixText="@string/euro_symbol_as_string">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_textInputLayout_numberOfBedRooms"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/bedroom"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/search_textInputLayout_minPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/search_textInputLayout_minPrice"
        app:layout_constraintTop_toBottomOf="@+id/search_textInputLayout_minPrice"
        app:startIconDrawable="@drawable/ic_baseline_bed_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_textInputEditText_numberOfBedRooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_textInputLayout_numberOfBathRooms"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/bathroom"
        app:expandedHintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/search_textInputLayout_numberOfBedRooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/search_textInputLayout_numberOfBedRooms"
        app:layout_constraintTop_toTopOf="@+id/search_textInputLayout_numberOfBedRooms"
        app:startIconDrawable="@drawable/ic_baseline_bathtub_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_textInputEditText_numberOfBathRooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_textInputLayout_city"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/city"
        android:minHeight="50dp"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_textInputLayout_numberOfBedRooms"
        app:placeholderText="@string/paris">

        <AutoCompleteTextView
            android:id="@+id/search_autoCompleteTextView_city"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_textInputLayout_asAgentSpinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Agent"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_textInputLayout_city"
        app:placeholderText="Select the agent in charge">

        <AutoCompleteTextView
            android:id="@+id/search_autoCompleteTextView_asAgentSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/search_chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_textInputLayout_asAgentSpinner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/search_chip_guard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:checkable="true"
                android:text="@string/guard"
                app:checkedIconVisible="true"
                app:chipIcon="@drawable/ic_outline_shield_24"
                app:chipIconVisible="true"
                app:chipMinTouchTargetSize="50dp"
                app:ensureMinTouchTargetSize="true"
                app:layout_constraintEnd_toStartOf="@+id/search_chip_garage"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/search_chip_garage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:checkable="true"
                android:text="@string/garage"
                app:checkedIconVisible="true"
                app:chipIcon="@drawable/ic_baseline_garage_24"
                app:chipIconVisible="true"
                app:chipMinTouchTargetSize="50dp"
                app:ensureMinTouchTargetSize="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/search_chip_guard"
                app:layout_constraintEnd_toStartOf="@+id/search_chip_garden"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/search_chip_guard" />

            <com.google.android.material.chip.Chip
                android:id="@+id/search_chip_garden"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginEnd="4dp"
                android:checkable="true"
                android:text="@string/garden"
                app:checkedIconVisible="true"
                app:chipIcon="@drawable/ic_baseline_forest_24"
                app:chipIconVisible="true"
                app:chipMinTouchTargetSize="50dp"
                app:ensureMinTouchTargetSize="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/search_chip_garage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/search_chip_garage" />

            <com.google.android.material.chip.Chip
                android:id="@+id/search_chip_elevator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:checkable="true"
                android:text="@string/elevator"
                app:checkedIconVisible="true"
                app:chipIcon="@drawable/ic_outline_elevator_24"
                app:chipIconVisible="true"
                app:chipMinTouchTargetSize="50dp"
                app:ensureMinTouchTargetSize="true"
                app:layout_constraintEnd_toEndOf="@+id/search_chip_guard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_chip_guard" />

            <com.google.android.material.chip.Chip
                android:id="@+id/search_chip_groceryStoreNextBy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:checkable="true"
                android:text="@string/grocery_store_next_by"
                app:checkedIconVisible="true"
                app:chipIcon="@drawable/ic_baseline_local_grocery_store_24"
                app:chipIconVisible="true"
                app:chipMinTouchTargetSize="50dp"
                app:ensureMinTouchTargetSize="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/search_chip_elevator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/search_chip_elevator" />

            <com.google.android.material.chip.Chip
                android:id="@+id/search_chip_soldOutRecently"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:checkable="true"
                android:text="@string/sold_out_recently"
                app:checkedIconVisible="true"
                app:chipIcon="@drawable/ic_outline_sell_24"
                app:chipIconVisible="true"
                app:chipMinTouchTargetSize="50dp"
                app:ensureMinTouchTargetSize="true"
                app:layout_constraintEnd_toStartOf="@+id/search_chip_registeredRecently"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_chip_elevator" />

            <com.google.android.material.chip.Chip
                android:id="@+id/search_chip_registeredRecently"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:checkable="true"
                android:text="@string/registered_recently"
                app:chipIcon="@drawable/ic_baseline_time_24"
                app:chipIconVisible="true"
                app:chipMinTouchTargetSize="50dp"
                app:ensureMinTouchTargetSize="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/search_chip_soldOutRecently"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/search_chip_soldOutRecently" />

            <com.google.android.material.chip.Chip
                android:id="@+id/search_chip_withPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/photos_available"
                app:chipIcon="@drawable/ic_baseline_photo_24"
                app:chipIconVisible="true"
                app:chipMinTouchTargetSize="50dp"
                app:ensureMinTouchTargetSize="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_chip_soldOutRecently" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/search_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_chipGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>